# esp-joker

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  esp-box.c  idf_component.yml  main.c
main/include/: esp-box.h  jokes.h
main/scripts/: c-text-array.sh
